AUTOMAKE_OPTIONS=foreign subdir-objects

top_dir = ${top_srcdir}/..

AM_CPPFLAGS = -I${top_dir}/memcached

#AM_LDFLAGS = -lz -lrt
AM_LDFLAGS = -lz -lstdc++

# LDADD = ${third_dir}/gperftools/lib/libtcmalloc_minimal.a \

MC_SRC =


noinst_LIBRARIES = memcache_db

memcache_db_a_SOURCES =

#SUBDIRS = test
